--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+server.port=8888
 
+spring.datasource.url=jdbc:mysql://localhost:3306/community
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=111111
+
+mybatis.mapper-locations=classpath:mybatis/*Mapper.xml
+mybatis.config-location=classpath:mybatis/MybatisConfig.xml
+
+
+#邮箱配置
+#平台地址，这里用的是qq邮箱，使用其他邮箱请更换
+spring.mail.host=smtp.qq.com
+#改成自己的邮箱
+spring.mail.username=963654394@qq.com
+#发送短信后它给你的授权码 填写到这里
+spring.mail.password=kdatwheqqnihbebb
+#这东西不用改
+spring.mail.properties.mail.smtp.ssl.enable=true
+##编码格式
+spring.mail.default-encoding=UTF-8
