--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.mail.password=kdatwheqqnihbebb
 spring.mail.properties.mail.smtp.ssl.enable=true
 ##编码格式
 spring.mail.default-encoding=UTF-8
+
+#解决因时区问题产生的时间差（前端与数据库中相差8小时）
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
