完善了个人分页和总分页，标题超链接未加

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.mail.default-encoding=UTF-8
 #解决因时区问题产生的时间差（前端与数据库中相差8小时）
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+#热部署生效
+spring.devtools.restart.enabled=true
+
