--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.datasource.password=111111
 mybatis.mapper-locations=classpath:mybatis/*Mapper.xml
 mybatis.config-location=classpath:mybatis/MybatisConfig.xml
 
+# redis
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.host=localhost
+
 
 #邮箱配置
 #平台地址，这里用的是qq邮箱，使用其他邮箱请更换
